<resources>
    <!-- App Strings -->
    <string name="app_name">SandVMI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">julian.assange</string>
    <string name="nav_header_subtitle">yearly plan</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="intro_App_title">Sand</string>
    <string name="intro_App_text">Secure, offshore, virtual mobile</string>


    <!-- Home Screen Strings -->
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About</string>
    <string name="menu_signup">Sign Up</string>
    <string name="menu_signin">Sign In</string>

    <!-- Splash Screen Strings -->
    <string name="splash4_title">Multiple device in one</string>
    <string name="splash4_content">No need to carry different devices. Access multiple virtual phones from 1 device. Wipe and reset them whenever you want. </string>
    <string name="splash3_title">Anonymity</string>
    <string name="splash3_content">We respect your privacy and ask only for the minimum info needed to create your cloud device.</string>
    <string name="splash2_title">No traceable logs</string>
    <string name="splash2_content">With zero data stored on your device, there is no sensitive info accessible if your phone is hacked or stolen.</string>
    <string name="splash1_title">Bulletproof security</string>
    <string name="splash1_content">Rely on military grade protection from hacks and data leaks with the support of tokens and one-time passwords.</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="getstart">Get Started</string>


    <!-- Subscription Screen Strings -->

    <!-- Subscription Home Screen Strings -->
    <string name="subscription_home_title">Start a subscription</string>
    <string name="subscription_home_item_1">Leave no trace of data on your device.</string>
    <string name="subscription_home_item_2">Multi factor encryption.</string>
    <string name="subscription_home_item_3">Keep your files, messages and online activity offshore, encrypted and anonymous.</string>
    <string name="subscription_home_button_text">Subscribe now</string>
    <string name="subscription_home_link"><u>or try free for 7 days</u></string>

    <!-- Subscription Home Screen Strings -->
    <string name="subscription_choose_plan_title">Subscription</string>
    <string name="subscription_confirmation_title">Confirmation</string>
    <string name="subscription_choose_plan_text">Restore a purchase</string>
    <string name="subscription_choose_plan_check_1">£15/month</string>
    <string name="subscription_choose_plan_check_2">£130/year</string>
    <string name="subscription_choose_plan_check_hint">7 day free trial</string>
    <string name="subscription_continue">Continue</string>
    <string name="subscription_choose_plan_sub_title">Choose a plan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscription_choose_payment_plan_title">Payment options</string>
    <string name="subscription_payment_method_check_1">Credit/Debit Card</string>
    <string name="subscription_payment_method_check_2">Cryptocurrency</string>
    <string name="subscription_crypto_text_1">Entered</string>
    <string name="subscription_crypto_edit1_hint">Card number...</string>
    <string name="subscription_credit_text_1">Active</string>
    <string name="subscription_credit_text_2">Name</string>
    <string name="subscription_credit_edit2_hint">Enter name</string>
    <string name="subscription_credit_edit1_hint">Card number...</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="number_six">6</string>
    <string name="number_seven">7</string>
    <string name="number_eight">8</string>
    <string name="number_nine">9</string>
    <string name="number_zero">0</string>
    <string name="subscription_buy_now">Buy Subscription Now</string>
    <string name="subscription_credit_text_3">Expired</string>
    <string name="subscription_credit_edit3_hint">CVV...</string>
    <string name="subscription_credit_text_4">Security Code</string>
    <string name="welcome_text">Welcome</string>
    <string name="confirmation_btn_text">Enter Sand Home</string>
    <string name="home_screen_text">Your Virtual Device will appear here once created.</string>
    <string name="home_screen_button_text">Create your Virtual Device</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="about_screen_text">This is about fragment</string>
    <string name="profile_payment_text">Payment Information</string>
    <string name="profile_contact_text">Contact Information</string>
    <string name="signup_title">Sign up to create your first\n Virtual Device</string>
    <string name="signup_info">Enter a password that has at least 8 characters which includes:\n - 1 Uppercase and 1 Lowercase letter\n  - 1 Number and 1 Special Character (e.g. $%^)</string>
    <string name="signup_btn_txt">Sign Up</string>
    <string name="sigup_info_2">By signing up, you agree to Sand’s Terms and Conditions.</string>
    <string name="signup_edit1_hint">Email address</string>
    <string name="signup_edit2_hint" >Username</string>
    <string name="signup_edit3_hint">Password</string>
    <string name="loading_title">Loading</string>
    <string name="loading_text">Securely accessing your dashboard</string>
    <string name="login_title">Sign in to access your\n Virtual Device</string>
    <string name="login_signup">Don’t have an account? <b>Sign up</b></string>
    <string name="login_btn_txt">Sign in</string>
    <string name="login_forgot_pass">Forgot your password?</string>

    <string name="toolbar_signin">Welcome Back</string>
    <string name="toolbar_signup">Create Account</string>
    <string name="toolbar_forgotpassword">Forgot Password</string>
    <string name="forgotpassword_title">Reset Password</string>
    <string name="forgot_btn_txt">Reset your password</string>

    <string name="error_login">The username or password is incorrect.</string>
    <string name="trial">Already have an account? Sign in</string>
    <string name="pincode_title">Enter your quick access PIN</string>
    <string name="success_signup">You have signed up succesfully.</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_valid_email">Please input a valid email address</string>
    <string name="error_fill">Please fill out this field.</string>
    <string name="error_uname_char_count">Please enter minimum 4 or maximum 10 characters</string>
    <string name="error_valid_uname"> Only letters and digits are available for this field</string>
    <string name="error_pass_char_count" >Please enter minimum 8 or maximum 15 characters</string>
    <string name="error_valid_pass">Please enter a valid password</string>
    <string name="error_pass_number">Password must contain 1 number</string>
    <string name="error_pass_symbols">Password must contain 1 special character</string>
    <string name="error_pass_upper_char">Password must contain 1 uppercase letter</string>
    <string name="error_pass_lower_char">Password must contain 1 lowercase letter</string>
    <string name="error_pass_not_allowed">Please do not use not allowed symbols.</string>
    <string name="toolbar_pinlock_auth">Welcome Back</string>
    <string name="pin_btn_txt">Login</string>
    <string name="pin_forgot_pass">Forgot 4-digit PIN</string>
    <string name="toolbar_pinlock_create">Set PIN Code</string>
    <string name="toolbar_pinlock_retype">Confirm PIN Code</string>
    <string name="pincode_title_create">Please enter a 4-digit PIN</string>
    <string name="pincode_title_retype">Please re-enter your 4-digit PIN</string>
    <string name="pin_match_error">This code doesn\'t match the other one</string>
    <string name="pin_incorrect_error">Incorrent PIN. Try again.</string>

    <string-array name="months_array">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="years_array">
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>

    </resources>
