<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/bg_screen"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent">

    <TextView
        style="@style/TitleTextViewStyle"
        android:text="@string/forgotpassword_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="78dp"
        android:gravity="center"
        />

    <EditText
        android:id="@+id/edit_fp_email"
        style="@style/EditTextStyle"
        android:layout_marginTop="24dp"
        android:drawableStart="@drawable/ic_mail_full_gray"
        android:inputType="textEmailAddress"
        android:hint="@string/signup_edit1_hint"
        android:drawablePadding="10dp"
        android:imeOptions="actionDone"
        />

    <Button
        android:id="@+id/btn_fp_reset"
        android:enabled="false"
        style="@style/ButtonStyle"
        android:layout_marginTop="24dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/forgot_btn_txt"
        />


</LinearLayout>