<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:background="@color/bg_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/subsc_credit_card_txt_1"
            style="@style/SandTextView.RobotoNormal.Small"
            android:textColor="@android:color/white"
            android:layout_marginTop="32dp"
            android:text="@string/subscription_credit_text_1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.cybercrypt.sandvmi.ui.widget.SandEditText
            android:layout_marginTop="54dp"
            style="@style/EditTextStyle"
            android:ellipsize="start"
            android:gravity="center_vertical"
            android:hint="@string/subscription_credit_edit1_hint"
            android:singleLine="true"
            android:id="@+id/edit_subsc_card_number"
            android:autofillHints="AUTOFILL_HINT_CREDIT_CARD_NUMBER"
            android:digits=" 1234567890"
            android:inputType="numberPassword"
            tools:targetApi="o"
            android:maxLength="19"
            />

        <TextView
            android:layout_marginTop="118dp"
            android:id="@+id/subsc_credit_card_txt_2"
            style="@style/SandTextView.RobotoNormal.Small"
            android:textColor="@android:color/white"
            android:text="@string/subscription_credit_text_2"
            android:singleLine="true"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <com.cybercrypt.sandvmi.ui.widget.SandEditText
            android:singleLine="true"
            android:id="@+id/edit_subsc_card_name"
            style="@style/EditTextStyle"
            android:hint="@string/subscription_credit_edit2_hint"
            android:imeOptions="actionDone"
            android:imeActionLabel="Done"
            android:autofillHints="AUTOFILL_HINT_PERSON_NAME"
            android:inputType="textPersonName"
            tools:targetApi="o"
            android:layout_marginTop="142dp"
            />

  <RelativeLayout
      android:layout_marginTop="200dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" >

      <TextView
          android:id="@+id/subsc_credit_card_txt_3"
          android:layout_alignParentTop="true"
          style="@style/SandTextView.RobotoNormal.Small"
          android:textColor="@android:color/white"
          android:text="@string/subscription_credit_text_3"
          android:layout_marginStart="16dp"
          android:layout_marginBottom="8dp"
          android:singleLine="true"
          android:layout_width="wrap_content"
          android:layout_alignParentStart="true" />

      <TextView
          android:id="@+id/subsc_credit_card_txt_4"
          style="@style/SandTextView.RobotoNormal.Small"
          android:textColor="@android:color/white"
          android:layout_width="wrap_content"
          android:layout_alignParentTop="true"
          android:layout_alignStart="@+id/edit_subsc_card_cvv"
          android:singleLine="true"
          android:text="@string/subscription_credit_text_4" />

      <Spinner
          style="@style/SpinnerTheme"
          android:layout_below="@+id/subsc_credit_card_txt_3"
          android:id="@+id/spin_subsc_card_expire_month"
          android:entries="@array/months_array"
          android:layout_width="91dp"
          android:layout_height="wrap_content"
          android:layout_centerVertical="true"
          android:layout_alignParentStart="true"
          android:layout_marginStart="16dp" />

      <Spinner
          style="@style/SpinnerTheme"
          android:spinnerMode="dropdown"
          android:id="@+id/spin_subsc_card_expire_year"
          android:layout_below="@+id/subsc_credit_card_txt_3"
          android:entries="@array/years_array"
          android:layout_width="91dp"
          android:layout_toEndOf="@+id/spin_subsc_card_expire_month"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp" />

      <com.cybercrypt.sandvmi.ui.widget.SandEditText
          android:id="@+id/edit_subsc_card_cvv"
          android:layout_below="@+id/subsc_credit_card_txt_3"
          style="@style/EditTextStyle"
          android:hint="@string/subscription_credit_edit3_hint"
          android:singleLine="true"
          android:autofillHints="AUTOFILL_HINT_CREDIT_CARD_NUMBER"
          tools:targetApi="o"
          android:inputType="numberPassword"
          android:layout_toEndOf="@+id/spin_subsc_card_expire_year"
          android:maxLength="3"
          />

  </RelativeLayout>

        <Button
            android:id="@+id/btn_credit_card_buy"
            style="@style/ButtonStyle"
            android:enabled="false"
            android:layout_gravity="center_horizontal"
            android:text="@string/subscription_buy_now"
            android:layout_marginTop="302dp"
        />

    </FrameLayout>
</layout>
