<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

<RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/bg_screen"
    android:layout_height="match_parent">

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dots_height"
        android:layout_above="@+id/btn_next"
        android:layout_marginBottom="40dp"
        android:gravity="center"
        android:orientation="horizontal" />

    <Button
        android:layout_above="@+id/btn_skip"
        android:id="@+id/btn_next"
        style="@style/ButtonStyle"
        android:text="@string/next"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:focusable="true" />

    <com.cybercrypt.sandvmi.ui.widget.SandTextView
        android:clickable="true"
        style="@style/SandTextView.RobotoBold.Medium"
        android:textColor="@color/secondary_text_color"
        android:id="@+id/btn_skip"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:background="@null"
        android:textStyle="bold"
        android:text="@string/skip"
        android:textSize="@dimen/medium_text_size"
        android:layout_marginBottom="24dp"
        app:applyLetterSpace="true"
        android:gravity="center_horizontal"
        android:focusable="true" />

    <com.cybercrypt.sandvmi.ui.widget.SandTextView
        android:clickable="true"
        style="@style/SandTextView.RobotoBold.Medium"
        android:textColor="@color/secondary_text_color"
        android:id="@+id/btn_trial"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/trial"
        android:visibility="invisible"
        android:layout_marginBottom="24dp"
        app:applyLetterSpace="true"
        android:gravity="center_horizontal"
        android:focusable="true" />

</RelativeLayout>
</layout>